QtcImprovement/force-app/main/default/objects/LoadSynthesis__c/LoadSynthesis__c.object-meta.xml
<CustomObject>
    <label>LoadSynthesis</label>
    <nameField>
        <displayFormat>LS-{00000000}</displayFormat>
        <label>LoadSynthesis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LoadSynthesis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>