QtcImprovement/force-app/main/default/objects/LoadSynthesis__c/fields/Annual_MWh__c.field-meta.xml
<CustomField>
    <fullName>Annual_MWh__c</fullName>
    <label>Annual MWh</label>
    <length>10</length>
    <type>Text</type>
</CustomField>