QtcImprovement/force-app/main/default/objects/LoadSynthesis__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
                <default>true</default>
                <label>none</label>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>Key/National</fullName>
            </value>
            <value>
                <fullName>D2D</fullName>
            </value>
            <value>
                <fullName>ABS</fullName>
            </value>
            <value>
                <fullName>Mass</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>