QtcImprovement/force-app/main/default/objects/LoadSynthesis__c/fields/Esiids__c.field-meta.xml
<CustomField>
    <fullName>Esiids__c</fullName>
    <label>Esiids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>