QtcImprovement/force-app/main/default/objects/LoadSynthesis__c/fields/Estimation_Type__c.field-meta.xml
<CustomField>
    <fullName>Estimation_Type__c</fullName>
    <label>Estimation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TOSA</fullName>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
            </value>
            <value>
                <fullName>LIGHTING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>