QtcImprovement/force-app/main/default/objects/LoadSynthesis__c/fields/IDR_Flag__c.field-meta.xml
<CustomField>
    <fullName>IDR_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IDR Flag</label>
    <type>Checkbox</type>
</CustomField>