QtcImprovement/force-app/main/default/objects/LoadSynthesis__c/fields/Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type__c</fullName>
    <label>Industry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGRICULTURE</fullName>
            </value>
            <value>
                <fullName>AIRLINES</fullName>
            </value>
            <value>
                <fullName>CHURCHES</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION</fullName>
            </value>
            <value>
                <fullName>ENERGY, OIL &amp; GAS</fullName>
            </value>
            <value>
                <fullName>ENTERTAINMENT/RESTAURANTS</fullName>
            </value>
            <value>
                <fullName>FINANCIAL SERVICES</fullName>
            </value>
            <value>
                <fullName>GOVERNMENT</fullName>
            </value>
            <value>
                <fullName>HOSPITALITY</fullName>
            </value>
            <value>
                <fullName>HOSPITALS AND HEALTHCARE</fullName>
            </value>
            <value>
                <fullName>INDUSTRIALS/MANUFACTURING</fullName>
            </value>
            <value>
                <fullName>REAL ESTATE / PROPERTY MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>RETAIL</fullName>
            </value>
            <value>
                <fullName>SCHOOLS (ISD, COLLEGES)</fullName>
            </value>
            <value>
                <fullName>SERVICE INDUSTRIES</fullName>
            </value>
            <value>
                <fullName>TECHNOLOGY</fullName>
            </value>
            <value>
                <fullName>TRANS., COMM., AND UTIL.</fullName>
            </value>
            <value>
                <fullName>WHOLESALE/DISTRIBUTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>