QtcImprovement/force-app/main/default/objects/LoadSynthesis__c/fields/Monthly_Usage__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Usage__c</fullName>
    <label>Monthly Usage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>