QtcImprovement/force-app/main/default/objects/LoadSynthesis__c/fields/No_of_Employee_for_Bus__c.field-meta.xml
<CustomField>
    <fullName>No_of_Employee_for_Bus__c</fullName>
    <label># of Employee for Bus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>none</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 to 3</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 to 5</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>5 to 10</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>10+</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>