QtcImprovement/force-app/main/default/objects/LoadSynthesis__c/fields/RequestedByUser_FederationID__c.field-meta.xml
<CustomField>
    <fullName>RequestedByUser_FederationID__c</fullName>
    <formula>Owner:User.TXU_RACF_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RequestedByUser</label>
    <type>Text</type>
</CustomField>