QtcImprovement/force-app/main/default/objects/LoadSynthesis__c/fields/Sq_Foot_of_Premise__c.field-meta.xml
<CustomField>
    <fullName>Sq_Foot_of_Premise__c</fullName>
    <label>Sq Foot of Premise</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>none</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 to 1499</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>1500 to 2499</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>2500 to 4999</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>5000 to 9999</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>10000 to 19999</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>20000 to 39999</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>40000 to 99999</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>100000+</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>