QtcImprovement/force-app/main/default/objects/LoadSynthesis__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted for Usage Download</fullName>
            </value>
            <value>
                <fullName>Submitted to Load Synthesis</fullName>
            </value>
            <value>
                <fullName>In Load Synthesis</fullName>
            </value>
            <value>
                <fullName>Load Synthesis Complete</fullName>
            </value>
            <value>
                <fullName>Load Synthesis Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>