QtcImprovement/force-app/main/default/objects/LoadSynthesis__c/fields/Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Business__c</fullName>
    <label>Years in Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>none</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>0 to 5</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>5 to 10</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>10+</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>