QtcImprovement/force-app/main/default/objects/LoadSynthesis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Estimation_Type__c</columns>
    <columns>Channel__c</columns>
    <columns>Status__c</columns>
    <columns>Esiids__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>